# wtyt

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: renovate.json5
.github/workflows/: lint_pr.yml  release.yml
src/wtyt/: add_comic.py  config.py  get_rss.py  main.py  notes.py  webtoon.py  yamtrack.py
tests/: test_webtoon.py
